# Okular-v3d-Plugins

./: .gitignore  .gitmodules  README.md  create-releases.sh  createRelease.sh  push-releases.sh  vcpkg.json
Embedded/: CMakeLists.txt  generator_pdf.cpp  generator_pdf.h
Release/: README.md  install.sh
Standard/: org.kde.okular-v3d.metainfo.xml
Standard/src/: v3d_generator.cpp  v3d_generator.h
base-release/: install.sh  uninstall.sh
base-release/examples/: teapot.v3d
pdf/: CMakeLists.txt  generator_pdf.cpp  generator_pdf.h
releases/: build-all.sh
releases/24.02/: build.sh
releases/24.02/okular/: .gitrepo  CMakeLists.txt
releases/24.02/okular/generators/pdf/: CMakeLists.txt  generator_pdf.cpp
releases/24.05/okular/: CMakeLists.txt
releases/24.05/okular/generators/pdf/: generator_pdf.cpp  generator_pdf.h
releases/24.05/okular/generators/v3d/: okularApplication_v3d.desktop
releases/24.08/: build.sh
releases/24.08/okular/: .gitrepo  CMakeLists.txt
releases/24.08/okular/generators/: CMakeLists.txt
releases/24.08/okular/generators/pdf/: generator_pdf.cpp
releases/24.08/okular/generators/v3d/: libokularGenerator_v3d.json
releases/24.12/: build.sh
releases/24.12/okular/: CMakeLists.txt
releases/24.12/okular/generators/: CMakeLists.txt
releases/24.12/okular/generators/pdf/: generator_pdf.cpp  generator_pdf.h
releases/25.04/: build.sh
releases/25.04/okular/: .gitrepo  CMakeLists.txt
releases/25.04/okular/generators/pdf/: CMakeLists.txt  generator_pdf.cpp  generator_pdf.h
releases/25.04/okular/generators/v3d/: CMakeLists.txt  libokularGenerator_v3d.json  makefile  okularV3d.desktop  org.kde.mobile.okular_v3d.desktop
releases/25.04/okular/generators/v3d/src/: v3d_generator.cpp  v3d_generator.h
testing/: test-all.sh  test-base.sh
testing/arch2025.05/: test.sh
testing/default-home/: install.sh
testing/fedora40-downgrade-okular/: test.sh
testing/fedora41-downgrade-okular/: test.sh
testing/fedora42/: test.sh
testing/fedora42-downgrade-okular/: test.sh
testing/fedora44/: test.sh
testing/ubuntu24.10/: test.sh
v3d/: CMakeLists.txt  README.md  triangle.v3d
v3d/src/: v3d_generator.cpp  v3d_generator.h
